add wildcards to gitignore

--- a/data/.gitignore
+++ b/data/.gitignore
@@ -1,2 +1,2 @@
-/data/sources/marc_loc_2016/.____padding_file/0
-/data/sources/marc_loc_2019/
+/data/sources/marc_loc_2016/*
+/data/sources/marc_loc_2019/*
